--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
       </style>
-    <title>Le jeu </title>
+    <title>QuoteGame</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
